...

        filmTableView.translatesAutoresizingMaskIntoConstraints = false
        filmTableView.register(ListFilmTableViewCell.self, forCellReuseIdentifier: listFilmTableViewCellID)
        filmTableView.backgroundColor = .white
        filmTableView.dataSource = self
        filmTableView.delegate = self
        filmTableView.accessibilityIdentifier = "MovieTableView"
        setConstraints()
        presenter?.receiveMovieList()
    }

    private func setConstraints() {
        NSLayoutConstraint.activate([
...
