...
    let labelText = UILabel()
    let movieImageView = UIImageView()
    
    
    override func awakeFromNib() {
        super.awakeFromNib()
        accessibilityIdentifier = "MovieTableViewCell"
    }
    
    override func setSelected(_ selected: Bool, animated: Bool) {
        super.setSelected(selected, animated: animated)
        createImage()
        createLabel()
...
