...
    }()

    // MARK: - Public Properties

    override func viewDidLoad() {
        super.viewDidLoad()
        chosenMovieTableView.accessibilityIdentifier = "MovieDetalTableView"
        chosenMovieTableView.delegate = self
        chosenMovieTableView.dataSource = self
        subviews()
        constraints()
        presenter?.receiveMovieDetails()
    }
...
